Align the personal tools drop-down submenu to the left for RTL scripts. Fixes #10181
svn path=/plonetheme.sunburst/trunk/; revision=33881

--- a/plonetheme/sunburst/skins/sunburst_styles/RTL.css
+++ b/plonetheme/sunburst/skins/sunburst_styles/RTL.css
@@ -63,6 +63,13 @@
     float: right;
 }
 
+/* Personal tools pulldown */
+
+#portal-personaltools dd {
+	right: auto;
+	left: 0;
+}
+
 /* Content pulldowns */
 
 #contentActionMenus {
